PLAT-630 update select dropdown, fix dark mode

--- a/src/portal/content/less/app/data-constructor.less
+++ b/src/portal/content/less/app/data-constructor.less
@@ -56,7 +56,7 @@ md-optgroup.bold-field-select > label {
 
 .ec-md-content {
   //background: #E5E5E5;
-  background: #eff4f7;
+  background: var(--page-background-color);
 }
 
 .ec-layout {
