--- a/src/portal/content/less/app/grid-table.less
+++ b/src/portal/content/less/app/grid-table.less
@@ -5,28 +5,28 @@
   justify-content: space-between;
 
   .grid-table-add-row-btn {
-    background-color: @orange;
+    background-color: var(--primary-color);
     min-width: 40px;
     width: 40px;
     min-height: 40px;
     height: 40px;
     border-radius: 100%;
-    color: #fff;
+    color: var(--on-primary-color);
     padding: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, .54);
 
     &:hover, &.md-button:not([disabled]):hover, &:focus {
-      background-color: rgba(240, 90, 34, 0.7);
+      background-color: var(--state-active-background-color);
     }
   }
 
   .grid-table-top-row-btns {
     font-weight: 700;
     padding: 0 10px;
-    color: @gray;
+    color: var(--secondary-color);
 
     &:hover {
-      background-color: rgba(240, 90, 34, 0.15);
+      background-color: var(--state-active-background-color);
     }
   }
 
@@ -41,7 +41,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    background-color: @orange;
+    background-color: var(--primary-color);
     padding: 0 16px;
     color: #fff;
   }
@@ -50,7 +50,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-right: 1px solid #fff;
+    border-right: 1px solid var(--table-border-color);
     padding-right: 24px;
   }
 
@@ -88,7 +88,7 @@
   padding-right: 16px;
   // padding-left: 36px;
   padding-left: 5px;
-  border-top: 1px solid @borderPale;
+  border-top: 1px solid var(--table-border-color);
   box-sizing: border-box;
   outline: none;
 
@@ -158,7 +158,7 @@
     height: 24px;
     top: 14px;
     left: 14px;
-    color: @gray;
+    color: var(--secondary-color);
     padding: 0;
     margin: 0;
   }
@@ -200,7 +200,7 @@
       span {
         // cursor: pointer;
         font-size: 13px;
-        color: #666666;
+        color: var(--secondary-color);
 
         &:hover {
           color: var(--secondary-color);
@@ -251,7 +251,7 @@
     height: 24px;
     padding: 0;
     margin: 0;
-    color: @gray;
+    color: var(--secondary-color);
     opacity: 0;
   }
 
@@ -313,7 +313,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        color: @gray;
+        color: var(--secondary-color);
 
         span.material-icons {
           font-size: 18px;
@@ -422,7 +422,7 @@
       padding: 0;
 
       span.material-icons {
-        background-color: @paleOrange;
+        background-color: var(--primary-color);
         border-radius: 100%;
       }
 
@@ -431,7 +431,7 @@
         outline: none;
 
         span.material-icons {
-          background-color: @orange;
+          background-color: var(--primary-color);
           color: #fff;
         }
 
@@ -478,11 +478,11 @@
 .grid-table-bordered-rows {
 
   .grid-table-row {
-    border-right: 1px solid @borderPale;
-    border-left: 1px solid @borderPale;
+    border-right: 1px solid var(--table-border-color);
+    border-left: 1px solid var(--table-border-color);
 
     &:last-child {
-      border-bottom: 1px solid @borderPale;
+      border-bottom: 1px solid var(--table-border-color);
     }
   }
 
@@ -490,12 +490,12 @@
 
 .grid-table-bottom-border {
   .grid-table-row:last-child {
-    border-bottom: 1px solid @borderPale;
+    border-bottom: 1px solid var(--table-border-color);
   }
 }
 
 .grid-table-cell-right-border {
-  border-right: 1px solid @borderPale;
+  border-right: 1px solid var(--table-border-color);
 }
 
 .grid-table-popup {
