--- a/src/portal/content/less/app/report-viewer.less
+++ b/src/portal/content/less/app/report-viewer.less
@@ -496,7 +496,7 @@
 
 
   .report-viewer-holder .g-wrapper .g-row-selection { // inside split panel
-    border-bottom: 1px solid @gCellBorderColor;
+    border-bottom: 1px solid var(--table-border-color);
   }
 
   /* .g-cell:last-child {
@@ -568,7 +568,7 @@
         font-family: 'Roboto-Regular', 'Roboto', sans-serif;
         font-weight: 400;
         font-style: normal;
-        color: #666666;
+        color: var(--secondary-color);
         line-height: 36px;
         padding: 0 15px;
       }*/
@@ -621,7 +621,7 @@
       text-align: left;
 
       font-size: 13px;
-      color: #666666;
+      color: var(--secondary-color);
 
     }
 
