--- a/src/portal/content/less/app/unified-data-select.less
+++ b/src/portal/content/less/app/unified-data-select.less
@@ -27,9 +27,11 @@
 }
 
 .unified-data-select-input-sel-option {
-  padding: 11px 16px 2px 16px;
+  padding: 11px 16px 11px 16px;
   box-sizing: border-box;
   width: 100%;
+  flex-direction: column;
+  align-items: start;
 
   span.highlight {
     color: var(--primary-color);
@@ -37,8 +39,8 @@
   }
 
   &:hover {
-    background: inherit;
-    background-color: rgba(0, 0, 0, 0.027450980392156862);
+    //background: inherit;
+    //background-color: rgba(0, 0, 0, 0.027450980392156862);
     border: none;
     border-radius: 0px;
     -moz-box-shadow: none;
@@ -98,13 +100,14 @@ unified-data-select {
   letter-spacing: normal;
   color: var(--secondary-color);
   display: block;
-  margin: 8px;
-  padding-left: 10px;
+  //margin: 8px;
+  padding: 16px 10px;
+  //padding-left: 10px;
   position: sticky;
   background: var(--dialog-background-color);
   cursor: pointer;
-  height: 30px;
-  padding-top: 9px;
+  //height: 30px;
+  //padding-top: 9px;
   box-sizing: border-box;
 }
 
@@ -199,10 +202,11 @@ unified-data-select {
     color: var(--secondary-color);
     display: block;
     /* margin: 8px; */
-    padding-left: 10px;
-    height: 46px;
+    //padding-left: 10px;
+    padding: 16px 10px;
+    //height: 46px;
     box-sizing: border-box;
-    padding-top: 15px;
+    //padding-top: 15px;
     position: sticky;
     background: --var(dialog-background-color);
     cursor: pointer;
@@ -222,6 +226,7 @@ unified-data-select {
   right: 15px;
   top: 15px;
   cursor: pointer;
+
   &:hover {
     opacity: .7;
   }
